--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 AUTH_SECRET="D2lM64nCShwGU7CyQBXlo6TuN/3OulyzEX4MakBDe/Bl"
 NEXT_PUBLIC_APP_URL=http://localhost:3001
-NEXT_PUBLIC_SERVER_URL=http://localhost:8080
+NEXT_PUBLIC_SERVER_URL=https://api.citizone.site
 AUTH_URL=http://localhost:3001
