--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@tanstack/react-table": "^8.16.0",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "axios": "^1.6.8",
